# perception-lab

./: .clang_format  .gitignore  MODULE.bazel
camera_slam/: BUILD  camera_slam.cpp
camera_slam/camera/: BUILD  pinhole_camera.cpp  pinhole_camera.h  stereo_camera.cpp  stereo_camera.h
camera_slam/feature_extractor/: BUILD  factory.cpp  factory.h  feature_extractor.h  feature_extractor_params.h  orb_feature.cpp  orb_feature.h  orb_feature_params.cpp  orb_feature_params.h
camera_slam/visual_odometry/: BUILD  visual_odometry.cpp  visual_odometry.h
camera_slam/visual_odometry/map/: map.h
data_loader/: BUILD  main.cpp  point_cloud_loader.h  waymo_open_dataset_loader.cpp  waymo_open_dataset_loader.h
data_loader/kitti/: BUILD  data_loader.cpp  data_loader.h
data_loader/waymo/: BUILD  utility.cpp  utility.h  waymo_open_dataset_loader.cpp  waymo_open_dataset_loader.h
lidar/: BUILD  build_map.cpp
lidar/point_cloud_registration/icp/: BUILD  icp.cpp  icp.h
lidar/slam/: BUILD  map.cpp  map.h  slam.cpp
lidar/slam/down_sample/: BUILD  down_sample.h  down_sample_params.h  factory.h  voxel_grid.h  voxel_grid_params.h
lidar/slam/feature_extractor/: BUILD  curvature_calculator.h  curvature_calculator_params.cpp  curvature_calculator_params.h  factory.h  feature_extractor.h  feature_extractor_params.h
lidar/slam/map/: BUILD  map.cpp  map.h
lidar/slam/matcher/: BUILD  factory.h  icp.h  icp_params.cpp  icp_params.h  matcher.h  matcher_params.h
lidar/slam/noise_remover/: BUILD  factory.h  noise_remover.h  noise_remover_params.h  statistical_outlier_remover.h  (+2 more)
(+6 files in other folders)
